--- a/static/styles.css
+++ b/static/styles.css
@@ -6,13 +6,40 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 105vh;
     background-color: #f4f4f4;
     background-image: url('/static/background.jpg');
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: flex;
+    background-position: center top; /* Adjusted position */
+}
+.pagination {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.pagination a {
+    padding: 10px 20px;
+    margin-right: 10px;
+    color: #007bff;
+    text-decoration: none;
+    background-color: #fff;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.pagination a:hover {
+    background-color: #007bff;
+    color: #fff;
+}
+
+.pagination span {
+    padding: 10px 20px;
+    color: #555;
+}
 .container {
     text-align: center;
     padding: 20px;
@@ -78,7 +105,14 @@ button:hover {
     border-radius: 5px;
     transition: width 0.2s;
 }
-
+.notification-list {
+    max-height: 400px; /* Adjust the maximum height as needed */
+    overflow-y: auto;
+    padding: 0;
+    list-style-type: none;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
 .download-btn {
     display: inline-block;
     padding: 5px 10px;
