Separated the main file into notifications.py, upload.py, app,py, config.py. Added functionality  to download all files processed on notifications page. Added defaultKeywords, and Manual keywords functionality.

--- a/static/styles.css
+++ b/static/styles.css
@@ -13,33 +13,40 @@ body {
     background-attachment: flex;
     background-position: center top; /* Adjusted position */
 }
-.pagination {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+      .pagination {
+          margin-top: 20px;
+          text-align: center;
+      }
 
-.pagination a {
-    padding: 10px 20px;
-    margin-right: 10px;
-    color: #007bff;
-    text-decoration: none;
-    background-color: #fff;
-    border: 2px solid #007bff;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
-}
+      .pagination a {
+          display: inline-block;
+          padding: 10px 20px;
+          margin: 0 5px;
+          color: #007bff;
+          text-decoration: none;
+          border: 2px solid #007bff;
+          border-radius: 5px;
+          transition: background-color 0.3s, color 0.3s;
+      }
 
-.pagination a:hover {
-    background-color: #007bff;
-    color: #fff;
-}
+      .pagination a:hover {
+          background-color: #007bff;
+          color: #fff;
+      }
+      .signature-count {
+      color: red;
+      font-weight: bold;
+  }
 
-.pagination span {
-    padding: 10px 20px;
-    color: #555;
-}
+      .pagination span {
+          display: inline-block;
+          padding: 10px 20px;
+          margin: 0 5px;
+          color: #007bff;
+          border: 2px solid #007bff;
+          border-radius: 5px;
+          background-color: #f4f4f4;
+      }
 .container {
     text-align: center;
     padding: 20px;
