--- a/templates/upload.html
+++ b/templates/upload.html
@@ -16,7 +16,7 @@
     <h1>Upload PDF Files</h1>
     <nav>
         <a href="/dashboard">Dashboard</a>
-        <a href="/notifications">Notifications</a>
+        <a href="/notifications">Overview</a>
     </nav>
     <div id="drop-area">
         <p>Drag and drop files here or click to upload</p>
@@ -32,6 +32,7 @@
         <span id="pageIndicator">Page 1</span>
         <a href="javascript:void(0)" id="nextPage">Next</a>
     </div>
+    <div style="margin-bottom: 20px;"></div>
 </div>
 <script src="/static/script.js"></script>
 </body>
