--- a/static/notifications/style.css
+++ b/static/notifications/style.css
@@ -2,9 +2,31 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 120vh;
     background-color: #f4f4f4;
+    background-image: url('/static/background.jpg');
+    background-size: cover;
+    background-position: center top;
 }
 
+.download-btn {
+    display: inline-block;
+    padding: 5px 7px;
+    background-color: #31ad2d;
+    color: white;
+    text-decoration: none;
+    border-radius: 10px;
+    margin-top: 2px;
+    width: 70px;
+}
+
+.download-btn:hover {
+    background-color: #3b7539;
+}
 .container {
     max-width: 800px;
     margin: 0 auto;
@@ -12,14 +34,18 @@ body {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 
-h1 {
-    margin-bottom: 20px;
-    color: #007bff;
+.top-right {
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 
-nav {
+nav.centered-nav {
+    display: flex;
+    justify-content: center;
     margin-bottom: 20px;
 }
 
@@ -40,10 +66,14 @@ nav a:hover {
     color: #fff;
 }
 
+.table-container {
+    max-height: 400px;
+    overflow-y: auto;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 20px;
 }
 
 table, th, td {
@@ -51,22 +81,54 @@ table, th, td {
 }
 
 th, td {
-    padding: 8px;
+    padding: 10px;
     text-align: left;
 }
 
 th {
     background-color: #007bff;
-    color: white;
+    color: #fff;
+}
+
+.pagination {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.pagination a {
+    padding: 10px 15px;
+    margin-right: 5px;
+    color: #007bff;
+    text-decoration: none;
+    background-color: #fff;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.pagination a:hover {
+    background-color: #007bff;
+    color: #fff;
+}
+
+.pagination .active {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
 }
 
 button {
     padding: 10px 20px;
-    color: #fff;
-    background-color: #007bff;
     border: none;
-    border-radius: 5px;
+    background-color: #007bff;
+    color: white;
+    font-size: 16px;
     cursor: pointer;
+    border-radius: 5px;
     transition: background-color 0.3s;
 }
 
@@ -74,41 +136,33 @@ button:hover {
     background-color: #0056b3;
 }
 
-.pagination {
+button.download-btn {
+    background-color: #28a745;
+    color: white;
+    border: 2px solid #28a745;
+    border-radius: 5px;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+
+button.download-btn:hover {
+    background-color: #218838;
+    border-color: #218838;
+}
+td.message {
+    max-width: 500px; /* Adjust as needed to fit your design */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.centered-button {
     display: flex;
     justify-content: center;
-    margin: 20px 0;
+    margin-top: 20px;
 }
+      h1 {
+          margin-bottom: 20px;
+          color: #007bff;
+              text-align: center; /* Add this line to center-align */
 
-.pagination a {
-    color: #007bff;
-    padding: 8px 16px;
-    text-decoration: none;
-    border: 1px solid #ddd;
-    margin: 0 2px;
-}
-
-.pagination a.active {
-    background-color: #007bff;
-    color: white;
-    border: 1px solid #007bff;
-}
-
-.pagination a:hover:not(.active) {
-    background-color: #ddd;
-}
-
-.download-btn {
-    display: inline-block;
-    padding: 5px;
-    background: #28a745;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    font-size: 12px;
-    float: right;
-}
-
-.download-btn:hover {
-    background-color: #218838;
-}
+      }
