--- a/static/notifications/style.css
+++ b/static/notifications/style.css
@@ -1,15 +1,16 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    padding: 0;
+    padding: -10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 120vh;
+    height: 105vh;
     background-color: #f4f4f4;
     background-image: url('/static/background.jpg');
     background-size: cover;
+    background-attachment: flex;
     background-position: center top;
 }
 
@@ -27,14 +28,23 @@ body {
 .download-btn:hover {
     background-color: #3b7539;
 }
+
 .container {
     max-width: 800px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 30px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     position: relative;
+    text-align: center;
+    width: 100%;
+}
+
+.top-left {
+    position: absolute;
+    top: 20px;
+    left: 20px;
 }
 
 .top-right {
@@ -59,6 +69,10 @@ nav a {
     border: 2px solid #007bff;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
+}
+
+nav a:last-child {
+    margin-right: 0; /* Remove right margin from the last nav item */
 }
 
 nav a:hover {
@@ -148,8 +162,9 @@ button.download-btn:hover {
     background-color: #218838;
     border-color: #218838;
 }
+
 td.message {
-    max-width: 500px; /* Adjust as needed to fit your design */
+    max-width: 500px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -160,9 +175,23 @@ td.message {
     justify-content: center;
     margin-top: 20px;
 }
-      h1 {
-          margin-bottom: 20px;
+      .message {
+          margin-top: 20px;
+          font-size: 16px;
           color: #007bff;
-              text-align: center; /* Add this line to center-align */
-
+          max-height: 200px;
+          overflow-y: auto;
+          padding: 10px;
+          border: 1px solid #ccc;
+          border-radius: 5px;
       }
+
+.centered-button button {
+    margin: 0 10px; /* Add horizontal margin between buttons */
+}
+
+h1 {
+    margin-bottom: 20px;
+    color: #007bff;
+    text-align: center;
+}
