--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -27,13 +27,13 @@
             <div id="manual-keywords">
                <div id="primary-keywords-container">
                   <label for="primary-keyword-input">Primary Keywords:</label>
-                  <input type="text" id="primary-keyword-input" name="primary_keywords[]" placeholder="Enter primary keywords, comma-separated">
+                  <input type="text" id="primary-keyword-input" name="primary_keywords[]" placeholder="Enter primary keywords, semicolon-separated">
                </div>
                <div style="margin-bottom: 15px;"></div>
                <!-- Add space here -->
                <div id="secondary-keywords-container">
                   <label for="secondary-keyword-input">Secondary Keywords:</label>
-                  <input type="text" id="secondary-keyword-input" name="secondary_keywords[]" placeholder="Enter secondary keywords, comma-separated">
+                  <input type="text" id="secondary-keyword-input" name="secondary_keywords[]" placeholder="Enter secondary keywords, semicolon-separated">
                </div>
             </div>
             <div class="buttons" style="display: flex; justify-content: center;">
