--- a/static/manual_compare/style.css
+++ b/static/manual_compare/style.css
@@ -43,6 +43,15 @@
          background-color: #007bff;
          color: #fff;
          }
+         .buttonIMG {
+         display: inline-block;
+         margin-top: 10px;
+         padding: 10px 15px;
+         background: #007bff;
+         color: #fff;
+         text-decoration: none;
+         border-radius: 5px;
+         }
          button {
          display: inline-block;
          margin-top: 10px;
