--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <div class="container">
-
         <div class="top-left">
             <button id="clearOutputDirBtn">Clear Root Directory</button>
         </div>
         <div class="top-right">
-            <button onclick="location.href='{{ url_for('download_all') }}'">Download All Files</button>
+            <button onclick="downloadFiles('all')">Download All Files</button>
         </div>
 
         <h1>Overview</h1>
@@ -21,9 +20,8 @@
             <a href="/dashboard">Dashboard</a>
             <a href="/upload">Upload Files</a>
         </nav>
-                        <div  class="message" id="message" ></div>
-                       <div style="margin-bottom: 15px;"></div>
-
+        <div class="message" id="message"></div>
+        <div style="margin-bottom: 15px;"></div>
 
         <div class="table-container">
             <table>
@@ -66,7 +64,6 @@
             <button onclick="exportFileNames()">Export File Names</button>
             <button onclick="window.open('{{ url_for('report') }}', '_blank')">View HTML Report</button>
         </div>
-
     </div>
 
     <script src="/static/notifications/notifications.js"></script>
@@ -76,6 +73,7 @@
             xhr.open('POST', '/clear_output_directory');
             xhr.setRequestHeader('Content-Type', 'application/json');
             xhr.onload = () => {
+                let message = document.getElementById('message');
                 if (xhr.status === 200) {
                     let response = JSON.parse(xhr.responseText);
                     if (response.status === 'success') {
@@ -89,6 +87,11 @@
             };
             xhr.send();
         });
+
+        function downloadFiles(type) {
+            const url = `/download/${type}`;
+            window.location.href = url;
+        }
     </script>
 </body>
 </html>
