--- a/templates/compare.html
+++ b/templates/compare.html
@@ -44,7 +44,7 @@
         </select>
     </div>
     <div class="top-right">
-        <select id="downloadDropdown" onchange="handleDownload(this)">
+        <select id="downloadDropdown">
             <option value="">Select Download</option>
             <option value="/download/mismatched">Download All MM (ZIP)</option>
             <option value="/download/matched">Download All M (ZIP)</option>
