--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -92,6 +92,9 @@
             const url = `/download/${type}`;
             window.location.href = url;
         }
+         function exportFileNames() {
+            window.location.href = '/export-file-names';
+        }
     </script>
 </body>
 </html>
