--- a/static/manual_compare/style.css
+++ b/static/manual_compare/style.css
@@ -14,12 +14,13 @@
     background-position: center top; /* Adjusted position */
          }
          .container {
-         max-width: 1000px;
+         max-width: 800px;
          margin: 0 auto;
-         padding: 20px;
+         padding: 30px;
          background-color: #fff;
          border-radius: 5px;
          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+         width: 100%;
          }
          h1 {
          margin-bottom: 20px;
