--- a/static/upload/style.css
+++ b/static/upload/style.css
@@ -1,151 +1,223 @@
 body {
-          font-family: Arial, sans-serif;
-          margin: 0;
-          padding: 0;
-          background-color: #f4f4f4;
-      }
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 105vh;
+    background-color: #f4f4f4;
+    background-image: url('/static/background.jpg');
+    background-size: cover;
+    background-attachment: flex;
+    background-position: center top;
+}
 
-      .container {
-          max-width: 800px;
-          margin: 0 auto;
-          padding: 0px;
-          background-color: #fff;
-          border-radius: 5px;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    text-align: center;
+    position: relative;
+}
 
-      h1 {
-          margin-bottom: 20px;
-          color: #007bff;
-      }
+h1 {
+    margin-bottom: 20px;
+    color: #007bff;
+}
 
-      nav {
-          margin-bottom: 20px;
-      }
+nav {
+    margin-bottom: 20px;
+}
 
-      nav a {
-          display: inline-block;
-          padding: 10px 20px;
-          margin-right: 10px;
-          color: #007bff;
-          text-decoration: none;
-          background-color: #fff;
-          border: 2px solid #007bff;
-          border-radius: 5px;
-          transition: background-color 0.3s, color 0.3s;
-      }
+nav a {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 0 10px;
+    color: #007bff;
+    text-decoration: none;
+    background-color: #fff;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
 
-      nav a:hover {
-          background-color: #007bff;
-          color: #fff;
-      }
+nav a:hover {
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: underline;
+}
 
-      #drop-area {
-          border: 2px dashed #ccc;
-          border-radius: 5px;
-          padding: 20px;
-          cursor: pointer;
-          margin-bottom: 20px;
-          text-align: center;
-      }
+#drop-area {
+    border: 2px dashed #ccc;
+    border-radius: 5px;
+    padding: 20px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    text-align: center;
+}
 
-      #drop-area.hover {
-          border-color: #007bff;
-      }
+#drop-area.hover {
+    border-color: #007bff;
+}
 
-      input[type="file"] {
-          display: none;
-      }
+input[type="file"] {
+    display: none;
+}
 
-      button {
-          display: inline-block;
-          margin-top: 10px;
-          padding: 10px 15px;
-          background: #007bff;
-          color: #fff;
-          text-decoration: none;
-          border-radius: 5px;
-      }
+button {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px 20px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
 
-      button:hover {
-          background-color: #0056b3;
-      }
+button:hover {
+    background-color: #0056b3;
+}
 
-      .message {
-          margin-top: 20px;
-          font-size: 16px;
-          color: #007bff;
-          max-height: 200px;
-          overflow-y: auto;
-          padding: 10px;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-      }
+.message {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #007bff;
+    max-height: 200px;
+    overflow-y: auto;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-align: center;
+}
 
-      .notification-item {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          padding: 10px;
-          border-bottom: 1px solid #ddd;
-      }
+.progress-bar {
+    width: 100%;
+    background-color: transparent;
+    margin-bottom: 10px;
+    height: 30px; /* Align height with .progress-bar-fill */
+    border-radius: 5px;
+    display: none;
+    overflow: hidden;
+    position: relative; /* Added for centering text */
+}
 
-      .notification-item:last-child {
-          border-bottom: none;
-      }
+.progress-bar-fill {
+    height: 100%;
+    width: 0;
+    background-color: #4caf50;
+    border-radius: 5px;
+    transition: width 0.2s;
+    color: white;
+    text-align: center;
+    line-height: 30px; /* Align with the height of .progress-bar */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute; /* Added for centering text */
+    top: 0; /* Added for centering text */
+    left: 0; /* Added for centering text */
+}
 
-      .notification-text {
-          flex-grow: 1;
-          text-align: left;
-          margin-right: 10px;
-      }
+.notification-list {
+    max-height: 400px;
+    overflow-y: auto;
+    padding: 0;
+    list-style-type: none;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
 
-      .download-btn {
-          display: inline-block;
-          padding: 10px;
-          background: #28a745;
-          color: #fff;
-          text-decoration: none;
-          border-radius: 5px;
-          font-size: 12px;
-      }
+.notification-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
 
-      .download-btn:hover {
-          background-color: #218838;
-      }
+.notification-item:last-child {
+    border-bottom: none;
+}
 
+.notification-text {
+    flex-grow: 1;
+    text-align: left;
+    margin-right: 10px;
+}
 
-      .pagination {
-          margin-top: 20px;
-          text-align: center;
-      }
+.download-btn {
+    display: inline-block;
+    padding: 10px;
+    background: #28a745;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 12px;
+    margin-top: 5px;
+}
 
-      .pagination a {
-          display: inline-block;
-          padding: 10px 20px;
-          margin: 0 5px;
-          color: #007bff;
-          text-decoration: none;
-          border: 2px solid #007bff;
-          border-radius: 5px;
-          transition: background-color 0.3s, color 0.3s;
-      }
+.download-btn:hover {
+    background-color: #218838;
+}
 
-      .pagination a:hover {
-          background-color: #007bff;
-          color: #fff;
-      }
-      .signature-count {
-      color: red;
-      font-weight: bold;
-  }
+.pagination {
+    margin-top: 20px;
+    text-align: center;
+}
 
-      .pagination span {
-          display: inline-block;
-          padding: 10px 20px;
-          margin: 0 5px;
-          color: #007bff;
-          border: 2px solid #007bff;
-          border-radius: 5px;
-          background-color: #f4f4f4;
-      }
+.pagination a {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 0 5px;
+    color: #007bff;
+    text-decoration: none;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.pagination a:hover {
+    background-color: #007bff;
+    color: #fff;
+}
+
+.pagination span {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 0 5px;
+    color: #007bff;
+    border: 2px solid #007bff;
+    border-radius: 5px;
+    background-color: #f4f4f4;
+}
+
+.signature-count {
+    color: red;
+    font-weight: bold;
+}
+
+.section-title {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.top-right-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
